<resources>
    <string name="app_name">MiSalud</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="nombre_del_usuario">nombre de usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="olvidaste_tu_contrase_a">¿olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="cambiar_contraseña">Cambiar contraseña</string>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="nombredeusuario">nombre de usuario</string>
    <string name="contraseña">contraseña</string>
    <string name="confirmar_contraseña">confirmar contraseña</string>
    <string name="inicia_sesi_n">inicia sesiòn</string>
</resources>